# JSONMap

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
demos/: demo.csv  demo.json  demo.yaml
docs/: index.html  performance.md
patches/: vite-plugin-monaco-editor@1.1.0.patch
src/: App.test.tsx  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: converter.rs  converter_test.rs  mod.rs  network.rs  network_test.rs  parser.rs  parser_test.rs  schema.rs  schema_test.rs  storage.rs  storage_test.rs  tools.rs  tools_test.rs
src/components/Help/: HelpPanel.tsx  (+1 more)
src/styles/: index.css
src/utils/: codegen.test.ts  codegen.ts  contentDiff.test.ts  contentDiff.ts  documentWorkspace.test.ts  documentWorkspace.ts  graphBenchmarkFixtures.test.ts  graphBenchmarkFixtures.ts  graphBenchmarkReport.test.ts  graphBenchmarkReport.ts  graphBranch.test.ts  graphBranch.ts  graphProcessing.benchmark.test.ts  graphProcessing.test.ts  graphProcessing.ts  graphSearch.test.ts  graphSearch.ts  graphTransform.test.ts  graphTransform.ts  jsonFormat.test.ts  jsonFormat.ts  jsonUtils.test.ts  jsonUtils.ts  tauri.ts
src/workers/: graphWorker.ts
(+28 files in other folders)
