[package]
name = "json-map"
version = "0.0.0"
description = "A native macOS JSON visualizer"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"
quick-xml = { version = "0.31", features = ["serialize"] }
toml = "0.8"
jsonwebtoken = "9.2"
base64 = "0.22"
rand = "0.8"
schemars = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
# Using jaq for jq-compatible queries without C dependencies
jaq-interpret = "1.5"
jaq-syn = "1.6"
jaq-core = "2.1"
jaq-std = "2.1"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
window-vibrancy = "0.6.0"
jsonpath_lib = "0.3.0"
jaq-json = { version = "1.0.0", features = ["serde_json"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
jsonschema = "0.18"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
